added resume and reach out button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </button>
         </li>
         <li>
-          <a class="header__resume btn" href="#">
+          <a class="header__resume btn" href="Undergrad_Resume_Final.pdf" target="_blank">
             resume
           </a>
         </li>
@@ -91,7 +91,7 @@
         <strong> UI/UX </strong> student
         specialized in building stunning interactive websites/applications.
       </p>
-      <a class="hero_btn btn" href="#">Reach Out</a>
+      <a class="hero_btn btn" href="mailto:edmundyau1214@gmail.com" target="_blank">Reach Out</a>
     </section>
 
     <section id="about" class="about container section">
