--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           </button>
         </li>
         <li>
-          <a class="header__resume btn" href="Undergrad_Resume_Final.pdf" target="_blank">
+          <a class="header__resume btn"
+            href="https://github.com/EdmundYau/Portfolio_Site/blob/69f5006349a644df714ddec6ba4efac5746ea13f/Undergrad_Resume_Final.pdf"
+            target="_blank">
             resume
           </a>
         </li>
@@ -73,7 +75,7 @@
           </button>
         </li>
         <li>
-          <a class="mobile-nav__btn btn" href="#"> Resume</a>
+          <a class="mobile-nav__btn btn" href="pdfs/Undergrad_Resume_Final.pdf" target="_blank"> Resume</a>
         </li>
       </u1>
     </nav>
@@ -319,7 +321,6 @@
         hi, my inbox is always open so feel free to reach out and I will get back to you as soon as possible.</p>
       <a class="contact__btn btn" href="mailto:edmundyau1214@gmail.com" target="_blank"> Reach Out</a>
     </section>
-
 
 
 
