fixed resume button mobile

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         </li>
         <li>
           <a class="header__resume btn"
-            href="https://github.com/EdmundYau/Portfolio_Site/blob/69f5006349a644df714ddec6ba4efac5746ea13f/Undergrad_Resume_Final.pdf"
-            target="_blank">
+            href="https://github.com/EdmundYau/Portfolio_Site/blob/main/Undergrad_Resume_Final.pdf" target="_blank">
             resume
           </a>
         </li>
@@ -75,7 +74,9 @@
           </button>
         </li>
         <li>
-          <a class="mobile-nav__btn btn" href="pdfs/Undergrad_Resume_Final.pdf" target="_blank"> Resume</a>
+          <a class="mobile-nav__btn btn"
+            href="https://github.com/EdmundYau/Portfolio_Site/blob/main/Undergrad_Resume_Final.pdf" target="_blank">
+            Resume</a>
         </li>
       </u1>
     </nav>
