added links to website

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <p class="work__project-description2"> Guided and mentored a team of six enthusiastic students in
             conceptualizing, designing, wiring, and engineering a
             miniature robotic project </p>
-          <a class="btn work__project-btn" href="#">Website</a>
+          <a class="btn work__project-btn" href="https://achineseschool.org/our-programs" target="_blank">Website</a>
         </div>
 
         <!-- project 2 -->
@@ -243,7 +243,7 @@
             the navigation bar
 
           </p>
-          <a class="btn work__project-btn" href="#">Website</a>
+          <a class="btn work__project-btn" href="https://edmundyau.github.io/youtube-clone/" target="_blank">Website</a>
         </div>
 
         <!-- project 3 -->
@@ -265,7 +265,8 @@
             states, and the Minimax algorithm to determine optimal moves.
 
           </p>
-          <a class="btn work__project-btn" href="#">Website</a>
+          <a class="btn work__project-btn" href="https://github.com/EdmundYau/mancala_smartAI"
+            target="_target">Website</a>
         </div>
 
         <!-- project 4 -->
@@ -286,7 +287,8 @@
             precisely manage the car's direction and motor speed, showcasing control system skills.
 
           </p>
-          <a class="btn work__project-btn" href="#">Website</a>
+          <a class="btn work__project-btn" href="https://github.com/EdmundYau/PathFollowingAutonomousCarProject"
+            target="_blank">Website</a>
         </div>
 
         <!-- project 5 -->
@@ -308,7 +310,8 @@
             and text, resulting in an organized presentation. It also enhances user experience by
             incorporating a Dark and Light mode feature,
             utilizing local storage for persistent theme preferences. </p>
-          <a class="btn work__project-btn" href="#">Website</a>
+          <a class="btn work__project-btn" href="https://portfolio-site-edmundyau.vercel.app/"
+            target="_blank">Website</a>
         </div>
 
 
